--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,16 @@
+name: web_debugger
+description: A Flutter app for website debugging (logs + typos)
+publish_to: 'none'
+
+version: 1.0.0+1
+
+environment:
+  sdk: '>=3.0.0 <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.2.2
-  webview_flutter_android: ^3.12.0
+
+flutter:
+  uses-material-design: true
